Increase nn accuracy

--- a/783_hw1/task5_next_char.ipynb
+++ b/783_hw1/task5_next_char.ipynb
@@ -15,20 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -200,10 +191,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b2 max relative error: 6.666663e-01\n",
-      "W2 max relative error: 6.670468e-01\n",
-      "W1 max relative error: 6.723109e-01\n",
-      "b1 max relative error: 6.666668e-01\n"
+      "b2 max relative error: 1.443387e-06\n",
+      "W2 max relative error: 3.755046e-04\n",
+      "W1 max relative error: 5.463838e-04\n",
+      "b1 max relative error: 2.188996e-07\n"
      ]
     }
    ],
@@ -232,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -288,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -330,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -340,256 +331,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration 0 / 25000: loss 163427.173501\n",
-      "iteration 100 / 25000: loss 75149.706832\n",
-      "iteration 200 / 25000: loss 145953.026049\n",
-      "iteration 300 / 25000: loss 171200.182316\n",
-      "iteration 400 / 25000: loss 117671.891462\n",
-      "iteration 500 / 25000: loss 129442.100679\n",
-      "iteration 600 / 25000: loss 157159.060490\n",
-      "iteration 700 / 25000: loss 110439.589276\n",
-      "iteration 800 / 25000: loss 111453.671922\n",
-      "iteration 900 / 25000: loss 98306.323558\n",
-      "iteration 1000 / 25000: loss 111004.876117\n",
-      "iteration 1100 / 25000: loss 69274.627633\n",
-      "iteration 1200 / 25000: loss 100687.655912\n",
-      "iteration 1300 / 25000: loss 105017.571620\n",
-      "iteration 1400 / 25000: loss 92115.504940\n",
-      "iteration 1500 / 25000: loss 89657.432447\n",
-      "iteration 1600 / 25000: loss 101539.703922\n",
-      "iteration 1700 / 25000: loss 86191.117207\n",
-      "iteration 1800 / 25000: loss 72710.448735\n",
-      "iteration 1900 / 25000: loss 89614.401784\n",
-      "iteration 2000 / 25000: loss 89234.584310\n",
-      "iteration 2100 / 25000: loss 87264.444260\n",
-      "iteration 2200 / 25000: loss 88662.259303\n",
-      "iteration 2300 / 25000: loss 79021.748413\n",
-      "iteration 2400 / 25000: loss 76404.313506\n",
-      "iteration 2500 / 25000: loss 76502.490469\n",
-      "iteration 2600 / 25000: loss 72768.138741\n",
-      "iteration 2700 / 25000: loss 69971.754259\n",
-      "iteration 2800 / 25000: loss 61567.614939\n",
-      "iteration 2900 / 25000: loss 63103.098635\n",
-      "iteration 3000 / 25000: loss 60403.999968\n",
-      "iteration 3100 / 25000: loss 68143.973887\n",
-      "iteration 3200 / 25000: loss 62705.693221\n",
-      "iteration 3300 / 25000: loss 64605.548782\n",
-      "iteration 3400 / 25000: loss 62399.080383\n",
-      "iteration 3500 / 25000: loss 66380.894079\n",
-      "iteration 3600 / 25000: loss 63119.564969\n",
-      "iteration 3700 / 25000: loss 51032.115754\n",
-      "iteration 3800 / 25000: loss 61665.491520\n",
-      "iteration 3900 / 25000: loss 53607.698577\n",
-      "iteration 4000 / 25000: loss 51013.600677\n",
-      "iteration 4100 / 25000: loss 46533.125058\n",
-      "iteration 4200 / 25000: loss 54767.899215\n",
-      "iteration 4300 / 25000: loss 59415.411414\n",
-      "iteration 4400 / 25000: loss 49949.332219\n",
-      "iteration 4500 / 25000: loss 48253.208491\n",
-      "iteration 4600 / 25000: loss 49268.371341\n",
-      "iteration 4700 / 25000: loss 45490.605419\n",
-      "iteration 4800 / 25000: loss 43522.573725\n",
-      "iteration 4900 / 25000: loss 45978.821955\n",
-      "iteration 5000 / 25000: loss 43833.050226\n",
-      "iteration 5100 / 25000: loss 46764.083754\n",
-      "iteration 5200 / 25000: loss 43426.165816\n",
-      "iteration 5300 / 25000: loss 46412.916447\n",
-      "iteration 5400 / 25000: loss 42619.225867\n",
-      "iteration 5500 / 25000: loss 44632.454072\n",
-      "iteration 5600 / 25000: loss 45982.246673\n",
-      "iteration 5700 / 25000: loss 43282.690323\n",
-      "iteration 5800 / 25000: loss 46069.853504\n",
-      "iteration 5900 / 25000: loss 40431.558926\n",
-      "iteration 6000 / 25000: loss 39140.733271\n",
-      "iteration 6100 / 25000: loss 41365.343199\n",
-      "iteration 6200 / 25000: loss 38490.674124\n",
-      "iteration 6300 / 25000: loss 40034.390442\n",
-      "iteration 6400 / 25000: loss 42730.609442\n",
-      "iteration 6500 / 25000: loss 40532.481615\n",
-      "iteration 6600 / 25000: loss 44148.976239\n",
-      "iteration 6700 / 25000: loss 40723.069992\n",
-      "iteration 6800 / 25000: loss 40752.932200\n",
-      "iteration 6900 / 25000: loss 40566.128966\n",
-      "iteration 7000 / 25000: loss 42274.788050\n",
-      "iteration 7100 / 25000: loss 37195.914141\n",
-      "iteration 7200 / 25000: loss 38789.026295\n",
-      "iteration 7300 / 25000: loss 41309.063987\n",
-      "iteration 7400 / 25000: loss 37974.521807\n",
-      "iteration 7500 / 25000: loss 40237.291162\n",
-      "iteration 7600 / 25000: loss 39803.002019\n",
-      "iteration 7700 / 25000: loss 36256.447201\n",
-      "iteration 7800 / 25000: loss 40347.217748\n",
-      "iteration 7900 / 25000: loss 38495.061080\n",
-      "iteration 8000 / 25000: loss 38848.721435\n",
-      "iteration 8100 / 25000: loss 40960.609266\n",
-      "iteration 8200 / 25000: loss 28278.518217\n",
-      "iteration 8300 / 25000: loss 37801.596535\n",
-      "iteration 8400 / 25000: loss 37650.999743\n",
-      "iteration 8500 / 25000: loss 39233.081811\n",
-      "iteration 8600 / 25000: loss 33996.676996\n",
-      "iteration 8700 / 25000: loss 35250.834269\n",
-      "iteration 8800 / 25000: loss 40329.584468\n",
-      "iteration 8900 / 25000: loss 37938.745163\n",
-      "iteration 9000 / 25000: loss 34256.425512\n",
-      "iteration 9100 / 25000: loss 33046.811876\n",
-      "iteration 9200 / 25000: loss 39736.937843\n",
-      "iteration 9300 / 25000: loss 35608.658614\n",
-      "iteration 9400 / 25000: loss 34766.470699\n",
-      "iteration 9500 / 25000: loss 40743.918310\n",
-      "iteration 9600 / 25000: loss 35808.460543\n",
-      "iteration 9700 / 25000: loss 36375.580518\n",
-      "iteration 9800 / 25000: loss 36487.814884\n",
-      "iteration 9900 / 25000: loss 38117.237714\n",
-      "iteration 10000 / 25000: loss 36372.152290\n",
-      "iteration 10100 / 25000: loss 30539.826343\n",
-      "iteration 10200 / 25000: loss 36339.361291\n",
-      "iteration 10300 / 25000: loss 34836.448009\n",
-      "iteration 10400 / 25000: loss 33856.248547\n",
-      "iteration 10500 / 25000: loss 39342.036000\n",
-      "iteration 10600 / 25000: loss 44941.601617\n",
-      "iteration 10700 / 25000: loss 35591.853424\n",
-      "iteration 10800 / 25000: loss 33535.011270\n",
-      "iteration 10900 / 25000: loss 27426.697788\n",
-      "iteration 11000 / 25000: loss 32901.021716\n",
-      "iteration 11100 / 25000: loss 36044.934186\n",
-      "iteration 11200 / 25000: loss 36370.248527\n",
-      "iteration 11300 / 25000: loss 31171.375644\n",
-      "iteration 11400 / 25000: loss 39285.963743\n",
-      "iteration 11500 / 25000: loss 36443.713615\n",
-      "iteration 11600 / 25000: loss 31514.568369\n",
-      "iteration 11700 / 25000: loss 33287.270966\n",
-      "iteration 11800 / 25000: loss 33454.373022\n",
-      "iteration 11900 / 25000: loss 35613.853448\n",
-      "iteration 12000 / 25000: loss 35082.582757\n",
-      "iteration 12100 / 25000: loss 32675.589019\n",
-      "iteration 12200 / 25000: loss 35138.400829\n",
-      "iteration 12300 / 25000: loss 34530.802561\n",
-      "iteration 12400 / 25000: loss 34484.497189\n",
-      "iteration 12500 / 25000: loss 35414.682377\n",
-      "iteration 12600 / 25000: loss 33002.386260\n",
-      "iteration 12700 / 25000: loss 34534.737353\n",
-      "iteration 12800 / 25000: loss 43848.620591\n",
-      "iteration 12900 / 25000: loss 30950.658443\n",
-      "iteration 13000 / 25000: loss 40734.626757\n",
-      "iteration 13100 / 25000: loss 31582.817252\n",
-      "iteration 13200 / 25000: loss 31776.098016\n",
-      "iteration 13300 / 25000: loss 34220.230426\n",
-      "iteration 13400 / 25000: loss 37239.947396\n",
-      "iteration 13500 / 25000: loss 41015.883676\n",
-      "iteration 13600 / 25000: loss 34982.378719\n",
-      "iteration 13700 / 25000: loss 31381.169846\n",
-      "iteration 13800 / 25000: loss 32528.062441\n",
-      "iteration 13900 / 25000: loss 34681.843062\n",
-      "iteration 14000 / 25000: loss 38871.607221\n",
-      "iteration 14100 / 25000: loss 38967.970375\n",
-      "iteration 14200 / 25000: loss 38890.172578\n",
-      "iteration 14300 / 25000: loss 39511.732803\n",
-      "iteration 14400 / 25000: loss 36672.032290\n",
-      "iteration 14500 / 25000: loss 36610.507434\n",
-      "iteration 14600 / 25000: loss 38308.383596\n",
-      "iteration 14700 / 25000: loss 41589.803181\n",
-      "iteration 14800 / 25000: loss 39624.336791\n",
-      "iteration 14900 / 25000: loss 30275.033427\n",
-      "iteration 15000 / 25000: loss 33225.990201\n",
-      "iteration 15100 / 25000: loss 35906.126948\n",
-      "iteration 15200 / 25000: loss 36525.660910\n",
-      "iteration 15300 / 25000: loss 36892.922834\n",
-      "iteration 15400 / 25000: loss 39530.023311\n",
-      "iteration 15500 / 25000: loss 34240.564024\n",
-      "iteration 15600 / 25000: loss 36473.757499\n",
-      "iteration 15700 / 25000: loss 36880.333479\n",
-      "iteration 15800 / 25000: loss 39521.615959\n",
-      "iteration 15900 / 25000: loss 36846.757840\n",
-      "iteration 16000 / 25000: loss 40328.349226\n",
-      "iteration 16100 / 25000: loss 32580.431748\n",
-      "iteration 16200 / 25000: loss 31915.571047\n",
-      "iteration 16300 / 25000: loss 33307.241150\n",
-      "iteration 16400 / 25000: loss 37477.580361\n",
-      "iteration 16500 / 25000: loss 41659.215760\n",
-      "iteration 16600 / 25000: loss 33738.130299\n",
-      "iteration 16700 / 25000: loss 31446.191671\n",
-      "iteration 16800 / 25000: loss 31105.571556\n",
-      "iteration 16900 / 25000: loss 28390.661259\n",
-      "iteration 17000 / 25000: loss 33253.327347\n",
-      "iteration 17100 / 25000: loss 35002.854608\n",
-      "iteration 17200 / 25000: loss 37180.878799\n",
-      "iteration 17300 / 25000: loss 36679.888107\n",
-      "iteration 17400 / 25000: loss 38593.005638\n",
-      "iteration 17500 / 25000: loss 35401.277573\n",
-      "iteration 17600 / 25000: loss 35319.997250\n",
-      "iteration 17700 / 25000: loss 28831.016350\n",
-      "iteration 17800 / 25000: loss 34622.570871\n",
-      "iteration 17900 / 25000: loss 32685.607398\n",
-      "iteration 18000 / 25000: loss 33939.626136\n",
-      "iteration 18100 / 25000: loss 33806.449316\n",
-      "iteration 18200 / 25000: loss 33663.674359\n",
-      "iteration 18300 / 25000: loss 39731.995354\n",
-      "iteration 18400 / 25000: loss 28095.321057\n",
-      "iteration 18500 / 25000: loss 38118.436543\n",
-      "iteration 18600 / 25000: loss 34591.175995\n",
-      "iteration 18700 / 25000: loss 33078.676157\n",
-      "iteration 18800 / 25000: loss 32743.986109\n",
-      "iteration 18900 / 25000: loss 37357.935916\n",
-      "iteration 19000 / 25000: loss 34670.716441\n",
-      "iteration 19100 / 25000: loss 30185.579528\n",
-      "iteration 19200 / 25000: loss 33299.336570\n",
-      "iteration 19300 / 25000: loss 29060.663764\n",
-      "iteration 19400 / 25000: loss 28915.439160\n",
-      "iteration 19500 / 25000: loss 32453.353176\n",
-      "iteration 19600 / 25000: loss 31024.978858\n",
-      "iteration 19700 / 25000: loss 31392.781918\n",
-      "iteration 19800 / 25000: loss 36548.396760\n",
-      "iteration 19900 / 25000: loss 28553.969435\n",
-      "iteration 20000 / 25000: loss 39413.851106\n",
-      "iteration 20100 / 25000: loss 36482.789571\n",
-      "iteration 20200 / 25000: loss 33072.111035\n",
-      "iteration 20300 / 25000: loss 33307.798424\n",
-      "iteration 20400 / 25000: loss 32353.073549\n",
-      "iteration 20500 / 25000: loss 35803.685849\n",
-      "iteration 20600 / 25000: loss 35430.355035\n",
-      "iteration 20700 / 25000: loss 29449.023653\n",
-      "iteration 20800 / 25000: loss 31640.769481\n",
-      "iteration 20900 / 25000: loss 35564.866414\n",
-      "iteration 21000 / 25000: loss 37626.235541\n",
-      "iteration 21100 / 25000: loss 36459.778869\n",
-      "iteration 21200 / 25000: loss 39318.739715\n",
-      "iteration 21300 / 25000: loss 34515.833362\n",
-      "iteration 21400 / 25000: loss 31237.001851\n",
-      "iteration 21500 / 25000: loss 28374.667973\n",
-      "iteration 21600 / 25000: loss 39835.331934\n",
-      "iteration 21700 / 25000: loss 36234.397101\n",
-      "iteration 21800 / 25000: loss 37491.213747\n",
-      "iteration 21900 / 25000: loss 30561.663404\n",
-      "iteration 22000 / 25000: loss 33762.737156\n",
-      "iteration 22100 / 25000: loss 30955.293010\n",
-      "iteration 22200 / 25000: loss 34717.960420\n",
-      "iteration 22300 / 25000: loss 33990.518988\n",
-      "iteration 22400 / 25000: loss 35021.435198\n",
-      "iteration 22500 / 25000: loss 25909.869025\n",
-      "iteration 22600 / 25000: loss 33246.881650\n",
-      "iteration 22700 / 25000: loss 33903.288063\n",
-      "iteration 22800 / 25000: loss 30977.674665\n",
-      "iteration 22900 / 25000: loss 32293.324649\n",
-      "iteration 23000 / 25000: loss 33187.587254\n",
-      "iteration 23100 / 25000: loss 32694.106320\n",
-      "iteration 23200 / 25000: loss 32297.372838\n",
-      "iteration 23300 / 25000: loss 32268.499214\n",
-      "iteration 23400 / 25000: loss 32192.862253\n",
-      "iteration 23500 / 25000: loss 28774.530180\n",
-      "iteration 23600 / 25000: loss 38658.047133\n",
-      "iteration 23700 / 25000: loss 31781.609257\n",
-      "iteration 23800 / 25000: loss 35924.879561\n",
-      "iteration 23900 / 25000: loss 30589.911843\n",
-      "iteration 24000 / 25000: loss 33089.532542\n",
-      "iteration 24100 / 25000: loss 27210.835782\n",
-      "iteration 24200 / 25000: loss 29363.651782\n",
-      "iteration 24300 / 25000: loss 30590.398267\n",
-      "iteration 24400 / 25000: loss 29677.475894\n",
-      "iteration 24500 / 25000: loss 29917.955613\n",
-      "iteration 24600 / 25000: loss 35216.087860\n",
-      "iteration 24700 / 25000: loss 31604.943438\n",
-      "iteration 24800 / 25000: loss 31669.154716\n",
-      "iteration 24900 / 25000: loss 29578.375247\n",
+      "iteration 0 / 5000: loss 872054.217734\n",
+      "iteration 100 / 5000: loss 44589987.703858\n",
+      "iteration 200 / 5000: loss 173103615.237301\n",
+      "iteration 300 / 5000: loss 180175544.581196\n",
+      "iteration 400 / 5000: loss 186118204.289275\n",
+      "iteration 500 / 5000: loss 187667823.142380\n",
+      "iteration 600 / 5000: loss 195029910.734469\n",
+      "iteration 700 / 5000: loss 194713617.823324\n",
+      "iteration 800 / 5000: loss 196538390.314120\n",
+      "iteration 900 / 5000: loss 196261953.899351\n",
+      "iteration 1000 / 5000: loss 196602899.600939\n",
+      "iteration 1100 / 5000: loss 196444501.238045\n",
+      "iteration 1200 / 5000: loss 196332107.893332\n",
+      "iteration 1300 / 5000: loss 196159884.262371\n",
+      "iteration 1400 / 5000: loss 196098685.555416\n",
+      "iteration 1500 / 5000: loss 195914069.271241\n",
+      "iteration 1600 / 5000: loss 195832414.172776\n",
+      "iteration 1700 / 5000: loss 195698415.153902\n",
+      "iteration 1800 / 5000: loss 195610404.587115\n",
+      "iteration 1900 / 5000: loss 195539740.403808\n",
+      "iteration 2000 / 5000: loss 195463925.031710\n",
+      "iteration 2100 / 5000: loss 195392642.807388\n",
+      "iteration 2200 / 5000: loss 195328438.134628\n",
+      "iteration 2300 / 5000: loss 195262321.526485\n",
+      "iteration 2400 / 5000: loss 195205023.729235\n",
+      "iteration 2500 / 5000: loss 195133637.091612\n",
+      "iteration 2600 / 5000: loss 195080136.880384\n",
+      "iteration 2700 / 5000: loss 195015222.596689\n",
+      "iteration 2800 / 5000: loss 194962339.572944\n",
+      "iteration 2900 / 5000: loss 194922327.362130\n",
+      "iteration 3000 / 5000: loss 194862194.872448\n",
+      "iteration 3100 / 5000: loss 194826876.551442\n",
+      "iteration 3200 / 5000: loss 194772252.526859\n",
+      "iteration 3300 / 5000: loss 194734610.321586\n",
+      "iteration 3400 / 5000: loss 194688735.479426\n",
+      "iteration 3500 / 5000: loss 194655166.829138\n",
+      "iteration 3600 / 5000: loss 194614284.093275\n",
+      "iteration 3700 / 5000: loss 194565358.634759\n",
+      "iteration 3800 / 5000: loss 194530739.031144\n",
+      "iteration 3900 / 5000: loss 194496200.483283\n",
+      "iteration 4000 / 5000: loss 194468436.135455\n",
+      "iteration 4100 / 5000: loss 194432942.014319\n",
+      "iteration 4200 / 5000: loss 194399885.084828\n",
+      "iteration 4300 / 5000: loss 194369029.210734\n",
+      "iteration 4400 / 5000: loss 194335402.617998\n",
+      "iteration 4500 / 5000: loss 194305163.403082\n",
+      "iteration 4600 / 5000: loss 194277406.874918\n",
+      "iteration 4700 / 5000: loss 194246311.578301\n",
+      "iteration 4800 / 5000: loss 194220653.916028\n",
+      "iteration 4900 / 5000: loss 194198094.413120\n",
       "Validation error:  31773459.0\n"
      ]
     }
