Delete unnecessary files

--- a/hw2/task2_layers.ipynb
+++ b/hw2/task2_layers.ipynb
@@ -131,9 +131,9 @@
      "output_type": "stream",
      "text": [
       "Testing affine_backward function:\n",
-      "dx error:  5.00460611424e-10\n",
-      "dw error:  5.50055413139e-09\n",
-      "db error:  3.27681830023e-12\n"
+      "dx error:  8.38439924841e-10\n",
+      "dw error:  1.30900582532e-10\n",
+      "db error:  4.32623169948e-12\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
      "output_type": "stream",
      "text": [
       "Testing relu_backward function:\n",
-      "dx error:  3.2756255484e-12\n"
+      "dx error:  3.27560555135e-12\n"
      ]
     }
    ],
@@ -259,12 +259,12 @@
      "output_type": "stream",
      "text": [
       "Testing svm_loss:\n",
-      "loss:  9.0019852611\n",
-      "dx error:  1.40215660067e-09\n",
+      "loss:  8.99958589004\n",
+      "dx error:  5.84304866699e-09\n",
       "\n",
       "Testing softmax_loss:\n",
-      "loss:  2.30278405146\n",
-      "dx error:  2.26612905539e-06\n"
+      "loss:  2.30254413801\n",
+      "dx error:  2.26581259192e-06\n"
      ]
     }
    ],
@@ -367,9 +367,9 @@
      "output_type": "stream",
      "text": [
       "Testing conv_backward_naive function\n",
-      "dx error:  2.07763175014e-08\n",
-      "dw error:  1.38813861442e-10\n",
-      "db error:  9.95950530364e-12\n"
+      "dx error:  8.02741671004e-09\n",
+      "dw error:  5.01457276218e-09\n",
+      "db error:  4.23188594298e-11\n"
      ]
     }
    ],
@@ -464,7 +464,7 @@
      "output_type": "stream",
      "text": [
       "Testing max_pool_backward_naive function:\n",
-      "dx error:  3.27562155839e-12\n"
+      "dx error:  3.27562256565e-12\n"
      ]
     }
    ],
@@ -514,26 +514,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "run the following from the cs231n directory and try again:\n",
-      "python setup.py build_ext --inplace\n",
-      "You may also need to restart your iPython kernel\n",
       "Testing conv_forward_fast:\n",
-      "Naive: 4.723148s\n",
-      "Fast: 0.017732s\n",
-      "Speedup: 266.364393x\n",
-      "Difference:  1.75817962706e-11\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "global name 'col2im_6d_cython' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-46bedfbda37b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0mdx_naive\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdw_naive\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdb_naive\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconv_backward_naive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcache_naive\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mt1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mdx_fast\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdw_fast\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdb_fast\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconv_backward_fast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcache_fast\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0mt2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/leoric/Desktop/deeplearning/hw2/cs231n/fast_layers.pyc\u001b[0m in \u001b[0;36mconv_backward_strides\u001b[0;34m(dout, cache)\u001b[0m\n\u001b[1;32m     99\u001b[0m   \u001b[0mdx_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mF\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdout_reshaped\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m   \u001b[0mdx_cols\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mHH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_h\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_w\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m   \u001b[0mdx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcol2im_6d_cython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdx_cols\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mHH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpad\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mdx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: global name 'col2im_6d_cython' is not defined"
+      "Naive: 4.084378s\n",
+      "Fast: 0.067591s\n",
+      "Speedup: 60.427881x\n",
+      "Difference:  7.81182871979e-11\n",
+      "\n",
+      "Testing conv_backward_fast:\n",
+      "Naive: 4.482006s\n",
+      "Fast: 0.011933s\n",
+      "Speedup: 375.602318x\n",
+      "dx difference:  5.00540531806e-11\n",
+      "dw difference:  6.12298710274e-13\n",
+      "db difference:  3.02769931027e-14\n"
      ]
     }
    ],
@@ -576,11 +569,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing pool_forward_fast:\n",
+      "Naive: 0.281317s\n",
+      "fast: 0.002480s\n",
+      "speedup: 113.432898x\n",
+      "difference:  0.0\n",
+      "\n",
+      "Testing pool_backward_fast:\n",
+      "Naive: 1.475454s\n",
+      "speedup: 89.943928x\n",
+      "dx difference:  0.0\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.fast_layers import max_pool_forward_fast, max_pool_backward_fast\n",
     "\n",
@@ -622,11 +632,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing conv_relu_pool_forward:\n",
+      "dx error:  2.54977843328e-08\n",
+      "dw error:  2.0081142859e-09\n",
+      "db error:  9.64561537682e-11\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.layer_utils import conv_relu_pool_forward, conv_relu_pool_backward\n",
     "\n",
@@ -652,11 +673,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing conv_relu_forward:\n",
+      "dx error:  1.97736266299e-08\n",
+      "dw error:  1.26465040903e-09\n",
+      "db error:  1.91569880305e-11\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.layer_utils import conv_relu_forward, conv_relu_backward\n",
     "\n",
@@ -681,11 +713,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_relu_forward:\n",
+      "dx error:  1.00450268725e-10\n",
+      "dw error:  3.52474784913e-10\n",
+      "db error:  3.57396931853e-11\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.layer_utils import affine_relu_forward, affine_relu_backward\n",
     "\n",
@@ -706,6 +749,24 @@
     "print 'dw error: ', rel_error(dw_num, dw)\n",
     "print 'db error: ', rel_error(db_num, db)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
